--- a/DisneyStreamingPlus/View/MainPage.xaml
+++ b/DisneyStreamingPlus/View/MainPage.xaml
@@ -14,8 +14,8 @@
 		<!-- TODO: Use Phase keyword -->
 		<DataTemplate x:Key="imagesTemplate" x:DataType="model:Row">
 			<StackPanel Orientation="Vertical">
-				<TextBlock Text="{x:Bind Caption}" FontSize="12" Foreground="White"/>
-				<GridView ItemsSource="{x:Bind ImageUrls}">
+				<TextBlock Text="{x:Bind Caption}" FontSize="12" Foreground="White" />
+				<GridView ItemsSource="{x:Bind ImageUrls}" Margin="0,4,0,4">
 					<ItemsControl.ItemsPanel>
 						<ItemsPanelTemplate>
 							<StackPanel Orientation="Horizontal" />
@@ -23,7 +23,7 @@
 					</ItemsControl.ItemsPanel>
 					<ItemsControl.ItemTemplate>
 						<DataTemplate x:DataType="x:String">
-							<Image Source="{x:Bind}" Width="135" ImageFailed="Image_ImageFailed" Margin="2"/>
+							<Image Source="{x:Bind}" Width="135" ImageFailed="Image_ImageFailed" Margin="2" />
 						</DataTemplate>
 					</ItemsControl.ItemTemplate>
 				</GridView>
