--- a/DisneyStreamingPlus/View/MainPage.xaml
+++ b/DisneyStreamingPlus/View/MainPage.xaml
@@ -23,7 +23,12 @@
 					</ItemsControl.ItemsPanel>
 					<ItemsControl.ItemTemplate>
 						<DataTemplate x:DataType="x:String">
-							<Image Source="{x:Bind}" Width="135" ImageFailed="Image_ImageFailed" Margin="2" />
+							<Image Width="135" ImageFailed="Image_ImageFailed" Margin="2">
+								<Image.Source>
+									<BitmapImage UriSource="{x:Bind}"
+												 DecodePixelWidth="135" />
+								</Image.Source>
+							</Image>
 						</DataTemplate>
 					</ItemsControl.ItemTemplate>
 				</GridView>
